--- a/src/index.css
+++ b/src/index.css
@@ -113,6 +113,12 @@ html, body, #map {
 
 #map {
   position: relative;
+  height: '100%';
+  width: '100%';
+  display: 'flex';
+  flex-flow: 'row nowrap';
+  justify-content: 'center';
+  padding: 0
 }
 
 .map-wrapper {
